--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/tictactoelogo.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
