--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
         <div class="settings">
             <div class="input-group">
                 <label for="gridSize">Grid Size:</label>
-                <input type="number" id="gridSize" min="3" max="10" value="3">
+                <div class="number-input-container">
+                    <input type="number" id="gridSize" min="3" max="10" value="3">
+                    <div class="number-controls">
+                        <div class="number-control-btn decrease">-</div>
+                        <div class="number-control-btn increase">+</div>
+                    </div>
+                </div>
             </div>
             <div class="input-group">
                 <label for="matchLength">Match Length:</label>
-                <input type="number" id="matchLength" min="3" max="10" value="3">
+                <div class="number-input-container">
+                    <input type="number" id="matchLength" min="3" max="10" value="3">
+                    <div class="number-controls">
+                        <div class="number-control-btn decrease">−</div>
+                        <div class="number-control-btn increase">+</div>
+                    </div>
+                </div>
             </div>
             <button id="startGame">Start Game</button>
         </div>
