--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Custom Tic Tac Toe</h1>
         <div class="settings">
             <div class="input-group">
-                <label for="gridSize">Grid Size:</label>
+                <label for="gridSize">Grid Size (3-15):</label>
                 <div class="number-input-container">
-                    <input type="number" id="gridSize" min="3" max="15" value="15">
+                    <input type="number" id="gridSize" min="3" max="15" value="3">
                     <div class="number-controls">
                         <div class="number-control-btn decrease">-</div>
                         <div class="number-control-btn increase">+</div>
@@ -23,9 +23,9 @@
                 </div>
             </div>
             <div class="input-group">
-                <label for="matchLength">Match Length:</label>
+                <label for="matchLength">Match Length (3-15):</label>
                 <div class="number-input-container">
-                    <input type="number" id="matchLength" min="3" max="15" value="15">
+                    <input type="number" id="matchLength" min="3" max="15" value="3">
                     <div class="number-controls">
                         <div class="number-control-btn decrease">−</div>
                         <div class="number-control-btn increase">+</div>
