--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="assets/tictactoelogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Screenshot 2025-03-22 205929.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
