--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                     </div>
                 </div>
             </div>
-            <button id="startGame">Start Game</button>
+            <div class="button-group">
+                <button id="playAI">Play against AI</button>
+                <button id="startGame">Play with Friends</button>
+            </div>
         </div>
         <div id="gameBoard"></div>
         <div id="scores">
