feat: add game container and switch views on game start
Introduce a new game container that is hidden by default and becomes visible when the game starts. This improves the user experience by separating the settings and game views. Additionally, added event listeners for both "Play with AI" and "Play with Friends" buttons to handle game initialization appropriately.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <button id="startGame">Play with Friends</button>
             </div>
         </div>
+    </div>
+    <div class="game-container hidden">
         <div id="gameBoard"></div>
         <div id="scores">
             <div>Player X: <span id="scoreX">0</span></div>
