refactor: reorganize JavaScript files and update script loading order
Split the monolithic script.js into modular files (game.js, ui.js, ai.js, main.js) for better maintainability. Updated the script loading order in index.html to ensure proper initialization. This improves code organization and separation of concerns.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         </div>
         <div id="status"></div>
     </div>
-    <script src="script.js"></script>
+    
+    <!-- Load scripts in the correct order -->
+    <script src="js/game.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/ai.js"></script>
+    <script src="js/main.js"></script>
+    <!-- <script>src="js/script.js"</script> -->
 </body>
 </html>
